--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,7 +34,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'pnpm'
+      - name: Enable Corepack
+        run: corepack enable
       - name: Install dependencies
         run: pnpm install
       - name: Build
